add checkbox for adding to csv and added method to highlight animals with best genome